--- a/02_scrollprogress/index.html
+++ b/02_scrollprogress/index.html
@@ -25,6 +25,7 @@
         <button type="button" class="print-btn" onclick="printme()"><i class="fas fa-print"></i></button>
 
         <div class="container printarea">
+            <img src="./img/fav(2).png" width="50px" alt="fav">
             <h4>This is page Indicator</h4>
 
         <p class="pagebreak">
